--- a/enigme.html
+++ b/enigme.html
@@ -20,11 +20,104 @@
                 <li><a href="#">ENIGME</a></li>
             </ul>
         </nav>
-</header>
+   </header>
+
+<main>
+<!-- Section première héro-->
+<section id="hero">
+    <div class="container">
+        <div>
+            <img src="./Assets/Enigme/Pantherenigme1.png" alt="">
+        </div>
+        <div>
+        <h1>
+            RELEVE LE DEFI DES DORA MILAJE
+        </h1>
+        <p>
+            Les Dora Milaje sont de farouches guerrières d’élite. Elles constituent la garde
+            rapprochée du Roi en personne et ont de nombreuses occasions de lui sauver la
+            vie. Leur Générale, Okoyé est également la dirigeante des forces armées et des
+            renseignements wakandais.
+        </p>
+        <p>
+            Prouve ton talent d’espion et déchiffre cette réplique d’Okoyé écrite en Wakandais,
+            et apprend par la même occasion la première valeur d’une Dora Milaje !
+        </p>
+        </div>
+    </div>
+</section>
+<!-- La deuxième section-->
+<section id="formulaire">
+    <div class="container">
+        <p>
+            " SI JE SUIS FIDELE C’EST A CE TRONE
+            PEU IMPORTE QUI MONTE DESSUS ”
+        </p>
+        <div>
+            <p>
+                Voici la transicription de l’alphabet : <br>
+                A = A ; B = b ; c = c ; d = d ; e = e ; f = f ; g = g ; h = h ; i = i ; j = j ; 
     
+                k = k ; l = l ; m = m ; n = n ; o = o ; p = p ; q = q ; r = r ; s = s ; t = t ;
+    
+                u = u ; w = w ; x = x ; y = y ; z = z 
+            </p>
+            <p>
+                Alors, as tu la réponse ?
+            </p>
+            <form action="">
+                <input type="text" placeholder="Réponse">
+                <input type="button" value="ENVOYER">
+            </form>
+        </div>
+
+        <div>
+            <p>
+                Le savais tu ? 
+            </p>
+            <p>
+                Plusieurs sources s’entendent pour dire que la lettre la plus utilisée en français est
+                la lettre E. En pourcentage de fréquence, la lettre est utilisée à 14% dans une
+                phrase. Et si tu regardais quel symbole revient le plus souvent ? 
+            </p>
+        </div>  
+    </div>
+
+</section>
+</main>
+
+<!-- Footer -->
+<footer>
+<div class="container">
+    <div class="logo-footer">
+        <img src="./Assets/All pages/footer1.png" alt="">
+        <img src="./Assets/All pages/footer2.png" alt="">
+    </div>
+    <div class="text-footer">
+        <h3>
+            PAGES
+        </h3>
+        <p>
+            à propos
+        </p>
+        <p>
+            Wakanda
+        </p>
+    </div>
+    <div class="socil-footer">
+        <img src="./Assets/All pages/footer3.png" alt="">
+        <img src="./Assets/All pages/footer4.png" alt="">
+        <img src="./Assets/All pages/footer5.png" alt="">
+        <img src="./Assets/All pages/footer6.png" alt="">
+    </div>
+    <div class="legal-footer">
+        <ul>
+            <li>2022 Tous droits réservés</li>
+            <li>Politique de confidentialité</li>
+            <li>Conditions d’utilisation</li>
+        </ul>
+    </div>
+</div>
+</footer>
 </body>
-<main></main>
-
-<footer></footer>
-
 </html>
