--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BLACK PANTHER TS4U | Home</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 <header>
         <nav class="container">
-            <a href="#">
+            <a class="logo" href="#">
                 <img src="./Assets/All pages/icon_SAYNA.png" alt="">
                 <img src="./Assets/All pages/icon_x.png" alt="">
                 <img src="./Assets/All pages/icon_MARVEL.png" alt="">
@@ -53,15 +54,13 @@
             Voir plus >
            </span>
         </div>
-        <div class="content">
-            <img src="./Assets/Accueil/Pantherhome1..png" alt="">
-        </div>
     </div>
 </section>
 
 <!-- La deuxième section concernant les personnage -->
 <section id="personnage">
     <div class="container">
+        <div class="personnage-black">
         <div class="personnage-item">
             <img src="./Assets/Accueil/Pantherhome2.png" alt="">
             <div>
@@ -98,6 +97,7 @@
                 </span>
             </div>
         </div>
+        </div>
         <div class="personnage-item">
             <img src="./Assets/Accueil/Pantherhome4.png" alt="">
         </div>
@@ -107,119 +107,123 @@
 <!-- La troisième section concernant le prince et le héros vengeur-->
 <section id="histoire">
     <div class="container">
-        <div class="histoire-tchalla">
-            <h3>
-                Naissance d’un prince
-            </h3>
-            <p>
-                T'Challa est né au Wakanda, un pays isolationniste situé en Afrique, du monarque régnant T'Chaka et de sa femme
-                Ramonda. Il a finalement eu une sœur cadette nommée Shuri. S'entraînant toute sa vie pour prendre la place de son père
-                en tant que prochain Black Panther, T'Challa est devenu un homme avec un esprit très actif et malgré tous les efforts de
-                T'Chaka, une grande aversion pour la politique. 
-            </p>
-            <p>
-                T'Challa est poli, respectueux et très attentionné envers les gens qu'il côtoie et qu'il considère comme ses amis. Il est
-                démontré qu'il a un grand respect envers les autres, en particulier envers son père, T'Chaka. Il honore la tradition et les
-                principes du Wakanda et est prêt à agir chaque fois que cela est nécessaire. À la mort de son père, il était disposé et prêt à
-                prendre la place qui lui revenait en tant que roi du Wakanda. Bien qu'il ne semble pas privilégier les combats, il a très vite
-                tenté de venger la mort de son père. Combattant honorable, T'Challa respecte ses adversaires et est prêt à épargner la vie
-                de ses ennemis. Cela étant dit, il n'est pas opposé à tuer ses adversaires dans un combat et n'essaie pas toujours d'éviter les
-                mesures mortelles de les neutraliser.
-            </p>
-            <p>
-                <q>Toute ma vie, je l'ai regardé porter le costume. Il pouvait soulever un homme à une seule main et courir aussi vite
-                qu'un zèbre. Puis il m'a dit qu'il était trop vieux pour continuer à endosser le rôle de Black Panther; il me l'a alors
-                passé afin de simplement rester roi. <br>
-                - Il me disait qu'il ne pouvait plus rentrer dans le costume.</q> <br>
-                - T'Challa et Zuri 
-            </p>
-        </div>
-        <div>
-            <h3>
-                UN HEROS VENGEUR
-            </h3>
-            <p>
-                <q>La mort, dans notre culture, n'est pas la fin. Pour nous, c'est plutôt un point de départ. Le défunt n'a qu'à tendre les
-                    bras; et Bast et Sekhmet le guident jusqu'à l'entrée de la grande vallée où il résidera à tout jamais. <br>
-                    - C'est une vision très pacifique. <br>
-                    - À l'image de mon père. Je ne suis pas mon père. </q> <br>
-                    - T'Challa et Natasha Romanoff
-            </p>
-            <p>
-                Suite à la mort de son père dans l'attentat à la bombe orchestré par Helmut Zemo, terroriste souhaitant la chute des
-                Avengers, T'Challa avait entrepris de tuer le Soldat de l'hiver, qui était largement considéré (à tort) comme responsable de
-                l'attaque. Au cours de sa tentative de trouver le Soldat de l'hiver, Black Panther avait rejoint une guerre civile entre les
-                Avengers, où il s'était rangé du côté d'Iron Man. T’Challa est alors animé par son désir de vengeance de la mort de son père,
-                ce qu’il partage avec Iron Man, tous deux victimes de l’assassinat de leurs parents.
-            </p>
-            <p>
-                Cependant, Black Panther apprend finalement en capturant Zemo, que c’était lui le seul responsable de la mort de son
-                père, et que le Soldat de l’hiver n’était alors qu’une arme entre les mains de Zemo. Se rendant compte de la supercherie
-                ainsi que de la voie sombre de la vengeance, T’Challa se promet de ne plus permettre aux désirs de vengeance de le
-                consumer à nouveau.
-            </p>
-            <p>
-                <q>Quelle est la meilleure façon de protéger le Wakanda ? Je dois devenir un grand roi baba, comme tu l'étais. <br>
-                    - Tu devras lutter. Pour ça, il te faudra t'entourer de personnes de confiance. Tu es un homme bon, avec un grand
-                coeur. C'est difficile pour un homme bon d'être roi. </q> <br>
-                    - T'Challa et T'Chaka
-            </p>
-        </div>
-        <div>
-            <h3>
-                UN HEROS PROTECTEUR ET JUSTICIER
-            </h3>
-            <p>
-                <q> Tu as eu tort ! Vous avez tous eu tort ! Il ne fallait pas tourner le dos au reste du monde. Nous avons laissé la peur
-                    d’être découverts nous empêcher de faire ce qui était juste. Non père, non je ne peux pas rester ici avec toi. Tant qu’il
-                    sera sur le trône, je ne saurai trouver le repos. C’est un monstre et c’est nous qui l’avons créé. Il faut que je reprenne
-                    le pouvoir, il le faut ! Il faut que je corrige ces injustices.</q> <br>
-                    - T'Challa à T'Chaka
-            </p>
-            <p>
-                Il y a des siècles, alors que cinq tribus africaines se disputaient une météorite composée de vibranium métallique
-                extraterrestre, un chaman guerrier Bashenga, guidé par la déesse panthère Bast, ingère une herbe en forme de cœur
-                affectée par le métal et acquiert des capacités surhumaines. Devenu le premier Black Panther , il unit toutes les tribus sauf
-                la tribu des Jabari, et forme la nation du Wakanda. Au fil du temps, les Wakandains utilisent le vibranium pour développer
-                une technologie de pointe tout en s'isolant du reste du monde et en se faisant passer pour un pays du tiers monde.
-            </p>
-            <p>
-                Après les événements qui se sont déroulés dans Captain America : Civil War , T'Challa revient chez lui prendre sa place sur
-                le trône du Wakanda, une nation africaine technologiquement très avancée. Néanmoins, T’Challa se retrouve rapidement
-                mis au défi pour obtenir le trône. Une fois couronné il espère accomplir une tâche que son père n’aura pas pu mener à son
-                terme : capturer Ulysse Klaw un voleur qui a volé du vibranium. Cette traque l’amènera à faire équipe avec l’agent de la CIA
-                Everett Ross et les membres de la Dora Milaje, les forces spéciales du Wakanda. Il découvira également un secret enfoui
-                sur sa famille qui lui fera prendre conscience de la nécessité de s’ouvrir au monde exterieur afin de ne pas répeter les
-                erreurs de son père.
-            </p>
-        </div>
-        <div class="biography-tchalla">
-            <div>
-                <img src="./Assets/Accueil/Pantherhome5.png" alt="">
-            </div>
-            <div>
-                <h3>T’Challa</h3>
-                <div class="cta">
-                    <a class="btn" href="#">Black Panther </a>
-                    <a class="btn" href="#">Roi du Wakanda</a>
-                    <a class="btn" href="#">En vie</a>
+        <div class="flex-container">
+            <div class="flex-left">
+                <div class="histoire-tchalla">
+                    <h3>
+                        Naissance d’un prince
+                    </h3>
+                    <p>
+                        T'Challa est né au Wakanda, un pays isolationniste situé en Afrique, du monarque régnant T'Chaka et de sa femme
+                        Ramonda. Il a finalement eu une sœur cadette nommée Shuri. S'entraînant toute sa vie pour prendre la place de son père
+                        en tant que prochain Black Panther, T'Challa est devenu un homme avec un esprit très actif et malgré tous les efforts de
+                        T'Chaka, une grande aversion pour la politique. 
+                    </p>
+                    <p>
+                        T'Challa est poli, respectueux et très attentionné envers les gens qu'il côtoie et qu'il considère comme ses amis. Il est
+                        démontré qu'il a un grand respect envers les autres, en particulier envers son père, T'Chaka. Il honore la tradition et les
+                        principes du Wakanda et est prêt à agir chaque fois que cela est nécessaire. À la mort de son père, il était disposé et prêt à
+                        prendre la place qui lui revenait en tant que roi du Wakanda. Bien qu'il ne semble pas privilégier les combats, il a très vite
+                        tenté de venger la mort de son père. Combattant honorable, T'Challa respecte ses adversaires et est prêt à épargner la vie
+                        de ses ennemis. Cela étant dit, il n'est pas opposé à tuer ses adversaires dans un combat et n'essaie pas toujours d'éviter les
+                        mesures mortelles de les neutraliser.
+                    </p>
+                    <p>
+                        <q>Toute ma vie, je l'ai regardé porter le costume. Il pouvait soulever un homme à une seule main et courir aussi vite
+                        qu'un zèbre. Puis il m'a dit qu'il était trop vieux pour continuer à endosser le rôle de Black Panther; il me l'a alors
+                        passé afin de simplement rester roi. <br>
+                        - Il me disait qu'il ne pouvait plus rentrer dans le costume.</q> <br>
+                        - T'Challa et Zuri 
+                    </p>
                 </div>
                 <div>
-                    <ul>
-                        <li>Acteur : Chadwick Boseman </li>
-                        <li> Apparition : Captain America Civil War (2016) </li>
-                        <li> Éspèce : humain </li>
-                        <li> Sexe : Homme</li>
-                        <li>  Décès : 31 mai 2018 (victime du Snap ; ressuscité par Hulk en 2023) (2016)</li>
-                        <li> Réalité : Terre-199999</li>
-                    </ul>
+                    <h3>
+                        UN HEROS VENGEUR
+                    </h3>
+                    <p>
+                        <q>La mort, dans notre culture, n'est pas la fin. Pour nous, c'est plutôt un point de départ. Le défunt n'a qu'à tendre les
+                            bras; et Bast et Sekhmet le guident jusqu'à l'entrée de la grande vallée où il résidera à tout jamais. <br>
+                            - C'est une vision très pacifique. <br>
+                            - À l'image de mon père. Je ne suis pas mon père. </q> <br>
+                            - T'Challa et Natasha Romanoff
+                    </p>
+                    <p>
+                        Suite à la mort de son père dans l'attentat à la bombe orchestré par Helmut Zemo, terroriste souhaitant la chute des
+                        Avengers, T'Challa avait entrepris de tuer le Soldat de l'hiver, qui était largement considéré (à tort) comme responsable de
+                        l'attaque. Au cours de sa tentative de trouver le Soldat de l'hiver, Black Panther avait rejoint une guerre civile entre les
+                        Avengers, où il s'était rangé du côté d'Iron Man. T’Challa est alors animé par son désir de vengeance de la mort de son père,
+                        ce qu’il partage avec Iron Man, tous deux victimes de l’assassinat de leurs parents.
+                    </p>
+                    <p>
+                        Cependant, Black Panther apprend finalement en capturant Zemo, que c’était lui le seul responsable de la mort de son
+                        père, et que le Soldat de l’hiver n’était alors qu’une arme entre les mains de Zemo. Se rendant compte de la supercherie
+                        ainsi que de la voie sombre de la vengeance, T’Challa se promet de ne plus permettre aux désirs de vengeance de le
+                        consumer à nouveau.
+                    </p>
+                    <p>
+                        <q>Quelle est la meilleure façon de protéger le Wakanda ? Je dois devenir un grand roi baba, comme tu l'étais. <br>
+                            - Tu devras lutter. Pour ça, il te faudra t'entourer de personnes de confiance. Tu es un homme bon, avec un grand
+                        coeur. C'est difficile pour un homme bon d'être roi. </q> <br>
+                            - T'Challa et T'Chaka
+                    </p>
                 </div>
-            
+                <div>
+                    <h3>
+                        UN HEROS PROTECTEUR ET JUSTICIER
+                    </h3>
+                    <p>
+                        <q> Tu as eu tort ! Vous avez tous eu tort ! Il ne fallait pas tourner le dos au reste du monde. Nous avons laissé la peur
+                            d’être découverts nous empêcher de faire ce qui était juste. Non père, non je ne peux pas rester ici avec toi. Tant qu’il
+                            sera sur le trône, je ne saurai trouver le repos. C’est un monstre et c’est nous qui l’avons créé. Il faut que je reprenne
+                            le pouvoir, il le faut ! Il faut que je corrige ces injustices.</q> <br>
+                            - T'Challa à T'Chaka
+                    </p>
+                    <p>
+                        Il y a des siècles, alors que cinq tribus africaines se disputaient une météorite composée de vibranium métallique
+                        extraterrestre, un chaman guerrier Bashenga, guidé par la déesse panthère Bast, ingère une herbe en forme de cœur
+                        affectée par le métal et acquiert des capacités surhumaines. Devenu le premier Black Panther , il unit toutes les tribus sauf
+                        la tribu des Jabari, et forme la nation du Wakanda. Au fil du temps, les Wakandains utilisent le vibranium pour développer
+                        une technologie de pointe tout en s'isolant du reste du monde et en se faisant passer pour un pays du tiers monde.
+                    </p>
+                    <p>
+                        Après les événements qui se sont déroulés dans Captain America : Civil War , T'Challa revient chez lui prendre sa place sur
+                        le trône du Wakanda, une nation africaine technologiquement très avancée. Néanmoins, T’Challa se retrouve rapidement
+                        mis au défi pour obtenir le trône. Une fois couronné il espère accomplir une tâche que son père n’aura pas pu mener à son
+                        terme : capturer Ulysse Klaw un voleur qui a volé du vibranium. Cette traque l’amènera à faire équipe avec l’agent de la CIA
+                        Everett Ross et les membres de la Dora Milaje, les forces spéciales du Wakanda. Il découvira également un secret enfoui
+                        sur sa famille qui lui fera prendre conscience de la nécessité de s’ouvrir au monde exterieur afin de ne pas répeter les
+                        erreurs de son père.
+                    </p>
+                </div>
             </div>
-        </div>
-        <div>
-            <img src="./Assets/Accueil/Pantherhome6.png" alt="">
-        </div>
+           
+            <div class="flex-right">
+                <div>
+                    <img src="./Assets/Accueil/Pantherhome5.png" alt="">
+                </div>
+                <div>
+                    <h3>T’Challa</h3>
+                    <div class="cta">
+                        <a class="btn" href="#">Black Panther </a>
+                        <a class="btn" href="#">Roi du Wakanda</a>
+                        <a class="btn" href="#">En vie</a>
+                    </div>
+                    <div>
+                        <ul>
+                            <li>Acteur : Chadwick Boseman </li>
+                            <li> Apparition : Captain America Civil War (2016) </li>
+                            <li> Éspèce : humain </li>
+                            <li> Sexe : Homme</li>
+                            <li>  Décès : 31 mai 2018 (victime du Snap ; ressuscité par Hulk en 2023) (2016)</li>
+                            <li> Réalité : Terre-199999</li>
+                        </ul>
+                    </div>
+                </div>
+                <div>
+                    <img src="./Assets/Accueil/Pantherhome6.png" alt="">
+                </div>
+            </div>       
+        </div>   
     </div>
 </section>
 
