Amélioration du CSS

--- a/enigme.html
+++ b/enigme.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ENIGME TS4U | ENIGME</title>
+    <link rel="stylesheet" href="./enigme.css">
 </head>
 <body>
     <header>
