--- a/index.html
+++ b/index.html
@@ -229,8 +229,9 @@
 
 <!-- La quatrième section concernant le formulaire-->
 <section id="contact">
+<div class="container">
     <div class="form">
-        <h3>Besoin de l’intervention du Wakanda ?</h3>
+        <p>Besoin de l’intervention du Wakanda ?</p>
         <h2>Contactez nous !</h2>
         <form action="">
             <input type="text" placeholder="Nom"><br>
@@ -239,9 +240,47 @@
             <input type="button" value="ENVOYER">
         </form>
     </div>
+</div>
 
 </section>
 </main>
-    <footer></footer>
+
+
+ <!-- Footer-->
+<footer>
+    <div class="container">
+        <div class="logo-footer">
+            <img src="./Assets/All pages/footer1.png" alt="">
+            <img src="./Assets/All pages/footer2.png" alt="">
+        </div>
+        <div class="text-footer">
+            <h3>
+                PAGES
+            </h3>
+            <p>
+                à propos
+            </p>
+            <p>
+                Wakanda
+            </p>
+        </div>
+        <div class="social-footer">
+            <h3> RETROUVEZ NOUS</h3>
+            <img src="./Assets/All pages/footer3.png" alt="">
+            <img src="./Assets/All pages/footer4.png" alt="">
+            <img src="./Assets/All pages/footer5.png" alt="">
+            <img src="./Assets/All pages/footer6.png" alt="">
+        </div>
+        <div class="legal-footer">
+            <p>
+                2022 Tous droits réservés
+            </p>
+            <ul>
+                <li>Politique de confidentialité</li>
+                <li>Conditions d’utilisation</li>
+            </ul>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
