--- a/enigme.html
+++ b/enigme.html
@@ -16,9 +16,9 @@
                 <img src="./Assets/All pages/icon_MARVEL.png" alt="">
             </a>
             <ul>
-                <li><a href="#">ACCEUIL</a></li>
-                <li><a href="#">WAKANDA</a></li>
-                <li><a href="#">ENIGME</a></li>
+                <li><a href="./index.html">ACCEUIL</a></li>
+                <li><a href="./wakanda.html">WAKANDA</a></li>
+                <li><a href="./enigme.html">ENIGME</a></li>
             </ul>
         </nav>
    </header>
