Amélioration de l'évaluation BLACK PANTHER

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <section id="personnage">
     <div class="container">
         <div class="personnage-black">
-        <div class="personnage-item">
+        <div class="personnage1">
             <img src="./Assets/Accueil/Pantherhome2.png" alt="">
             <div>
                 <h3>
@@ -81,7 +81,7 @@
                 </span>
             </div>
         </div>
-        <div class="personnage-item">
+        <div class="personnage2">
             <img src="./Assets/Accueil/Pantherhome3.png" alt="">
             <div>
                 <h3>
@@ -100,7 +100,7 @@
             </div>
         </div>
         </div>
-        <div class="personnage-item">
+        <div class="personnage3">
             <img src="./Assets/Accueil/Pantherhome4.png" alt="">
         </div>
     </div>
@@ -212,20 +212,17 @@
                     </div>
                     <div>
                         <ul>
-                            <li>Acteur : Chadwick Boseman </li>
-                            <li> Apparition : Captain America Civil War (2016) </li>
-                            <li> Éspèce : humain </li>
-                            <li> Sexe : Homme</li>
-                            <li>  Décès : 31 mai 2018 (victime du Snap ; ressuscité par Hulk en 2023) (2016)</li>
-                            <li> Réalité : Terre-199999</li>
+                            <li>Acteur : <Span>Chadwick Boseman</Span></li>
+                            <li> Apparition : <Span>Captain America Civil War (2016)</Span> </li>
+                            <li> Éspèce :<Span>humain</Span></li>
+                            <li> Sexe :<Span>Homme</Span></li>
+                            <li>  Décès : <Span>31 mai 2018 </Span>(victime du Snap ; ressuscité par Hulk en 2023)<Span></Span> (2016)</li>
+                            <li> Réalité : <Span>Terre-199999</Span></li>
                         </ul>
-                    </div>
-                <div>
-
-                <div>
-                    <img src="./Assets/Accueil/Pantherhome6.png" alt="">
-                </div    
+                    </div> 
+                </div>
             </div>
+            <img src="./Assets/Accueil/Pantherhome6.png" alt="">
     </div>
 </section>
 
