--- a/enigme.html
+++ b/enigme.html
@@ -27,10 +27,11 @@
 <!-- Section première héro-->
 <section id="hero">
     <div class="container">
-        <div>
+        <div class="diva">
+        <div class="div1">
             <img src="./Assets/Enigme/Pantherenigme1.png" alt="">
         </div>
-        <div>
+        <div class="div2">
         <h1>
             RELEVE LE DEFI DES DORA MILAJE
         </h1>
@@ -45,16 +46,19 @@
             et apprend par la même occasion la première valeur d’une Dora Milaje !
         </p>
         </div>
+        </div>
     </div>
 </section>
 <!-- La deuxième section-->
 <section id="formulaire">
     <div class="container">
-        <p>
+        <div class="div1">
             " SI JE SUIS FIDELE C’EST A CE TRONE
             PEU IMPORTE QUI MONTE DESSUS ”
-        </p>
-        <div>
+        </div>
+          
+        <div class="diver">
+        <div class="div3">
             <p>
                 Voici la transicription de l’alphabet : <br>
                 A = A ; B = b ; c = c ; d = d ; e = e ; f = f ; g = g ; h = h ; i = i ; j = j ; 
@@ -72,7 +76,7 @@
             </form>
         </div>
 
-        <div>
+        <div class="div4">
             <p>
                 Le savais tu ? 
             </p>
@@ -82,6 +86,7 @@
                 phrase. Et si tu regardais quel symbole revient le plus souvent ? 
             </p>
         </div>  
+        </div>
     </div>
 
 </section>
