--- a/wakanda.html
+++ b/wakanda.html
@@ -45,7 +45,7 @@
 <!-- La deuxième section concernant les histoires-->
 <section id="histoire">
 <div class="container">
-    <div>
+    <div class="div1">
         <h3>
             Origines
         </h3>
@@ -77,10 +77,8 @@
             américain Myron MacLain pour former le bouclier rond du Captain.
         </p>
         <div>
-            <p>
-                Vidéo:<a href="https://www.youtube.com/watch?v=ts30OG3Qld0">https://www.youtube.com/watch?v=ts30OG3Qld0</a>
-                <a href="https://www.youtube.com/watch?v=gMLh7wS5Dsw">https://www.youtube.com/watch?v=gMLh7wS5Dsw</a>
-            </p>  
+            <iframe width="420" height="345" src="https://www.youtube.com/watch?v=ts30OG3Qld0">
+            </iframe>
         </div>
         <h3>
             UN CINEMA AFRO AMERICAIN QUI RESONNE
@@ -118,7 +116,7 @@
             déclaré pour la première fois continent noir et ont commencé à piller son peuple et ses ressources.
         </p>
     </div>
-    <div>
+    <div class="div2">
         <h3>
             Le culte de la panthere noire
         </h3>
@@ -205,8 +203,41 @@
 </main>
 
 <!-- La section footer -->
+<!-- Footer-->
 <footer>
-
+    <div class="container">
+        <div class="logo-footer">
+            <img src="./Assets/All pages/footer1.png" alt="">
+            <img src="./Assets/All pages/footer2.png" alt="">
+        </div>
+        <div class="text-footer">
+            <h3>
+                PAGES
+            </h3>
+            <p>
+                à propos
+            </p>
+            <p>
+                Wakanda
+            </p>
+        </div>
+        <div class="social-footer">
+            <h3> RETROUVEZ NOUS</h3>
+            <img src="./Assets/All pages/footer3.png" alt="">
+            <img src="./Assets/All pages/footer4.png" alt="">
+            <img src="./Assets/All pages/footer5.png" alt="">
+            <img src="./Assets/All pages/footer6.png" alt="">
+        </div>
+        <div class="legal-footer">
+            <p>
+                2022 Tous droits réservés
+            </p>
+            <ul>
+                <li>Politique de confidentialité</li>
+                <li>Conditions d’utilisation</li>
+            </ul>
+        </div>
+    </div>
 </footer>
 </body>
 </html>
